Homie framework used to manage WiFi and MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ board = esp12e
 src_build_flags = -DDBG
 
 lib_deps = 
-  WifiManager 
-  PubSubClient
+  AsyncMqttClient
+  Bounce2
   ArduinoJson
   Adafruit ADS1X15
