:tada: Updated to latest Homie version.
- Removed git submodule as platformio could download Homie directly from github
- Minor changes to make code compatible with latest Homie version.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,9 @@ board = esp12e
 src_build_flags = -DDBG
 
 lib_deps = 
-  AsyncMqttClient
   Bounce2
   ArduinoJson
   Adafruit ADS1X15
+  ESPAsyncTCP
+  https://github.com/marvinroger/async-mqtt-client.git
+  https://github.com/marvinroger/homie-esp8266.git
